--- a/static/bib/references.bib
+++ b/static/bib/references.bib
@@ -159,6 +159,18 @@ year = {2020}
 
 
 
+@article{deeks2002issues,
+author = {Deeks, Jonathan J.},
+title = {Issues in the selection of a summary statistic for meta-analysis of clinical trials with binary outcomes},
+journal = {Statistics in Medicine},
+volume = {21},
+number = {11},
+pages = {1575-1600},
+keywords = {meta-analysis, odds ratio, risk ratio, risk difference, binary data, randomized controlled trials},
+doi = {https://doi.org/10.1002/sim.1188},
+year = {2002}
+}
+
 
 
 
